--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@liamcottle/meshcore.js",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "device.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
