--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Liam Cottle <liam@liamcottle.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@noble/curves": "^1.8.1"
+  }
 }
