add nodejs serial connection support

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Liam Cottle <liam@liamcottle.com>",
   "license": "MIT",
   "dependencies": {
-    "@noble/curves": "^1.8.1"
+    "@noble/curves": "^1.8.1",
+    "serialport": "^13.0.0"
   }
 }
